Version of All Dependencies Have Been Upgraded to Latest and Code Fixes