@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.7</version>
+        <version>3.2.1</version>
         <relativePath/>
     </parent>
 
@@ -25,16 +25,18 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.version>3.11.0</maven.compiler.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <mysql.version>8.2.0</mysql.version>
 
-        <testcontainers.version>1.19.2</testcontainers.version>
-        <liquibase.version>4.23.2</liquibase.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
+        <liquibase.version>4.25.1</liquibase.version>
         <easy-random-core.version>5.0.0</easy-random-core.version>
-        <springdoc.openapi.version>2.0.0</springdoc.openapi.version>
+        <springdoc.openapi-starter-webmvc-ui.version>2.3.0</springdoc.openapi-starter-webmvc-ui.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <jsonwebtoken.version>0.11.5</jsonwebtoken.version>
-        <bouncycastle.version>1.70</bouncycastle.version>
+        <jsonwebtoken.version>0.12.3</jsonwebtoken.version>
+        <bouncycastle.version>1.77</bouncycastle.version>
         <snakeyaml.version>2.2</snakeyaml.version>
+        <jakarta.validation-api.version>3.1.0-M1</jakarta.validation-api.version>
     </properties>
 
     <dependencies>
@@ -59,6 +61,7 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
+            <version>${jakarta.validation-api.version}</version>
         </dependency>
 
         <dependency>
@@ -88,7 +91,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>${springdoc.openapi.version}</version>
+            <version>${springdoc.openapi-starter-webmvc-ui.version}</version>
         </dependency>
         <!-- ===================== -->
         <!-- open api dependencies -->
@@ -151,7 +154,7 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpkix-jdk15on</artifactId>
+            <artifactId>bcpkix-jdk18on</artifactId>
             <version>${bouncycastle.version}</version>
         </dependency>
         <!-- ===================== -->
@@ -269,6 +272,13 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
